src/objects/OrderApi__Transaction__c.object
<CustomObject>
    <description>Transactions store all debits and credits for double-entry accounting.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Inherited from the Account on the linked source record.</description>
        <inlineHelpText>**System Calculated/Override** Inherited from the Account on the linked source record.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the related Batch for the Transaction.</description>
        <inlineHelpText>**System Calculated/Override** Link to the related Batch for the Transaction.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>OrderApi__Batch__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related Business Group.</description>
        <inlineHelpText>**System Calculated** Link to related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Transactions (Summary)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Inherited from the Contact on the linked source record.</description>
        <inlineHelpText>**System Calculated/Override** Inherited from the Contact on the linked source record.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit_Memo_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the Credit Memo Line record, when an overpayment is used.</description>
        <inlineHelpText>**System Calculated/Override** Link to the Credit Memo Line record, when an overpayment is used.</inlineHelpText>
        <label>Credit Memo Line</label>
        <referenceTo>OrderApi__Credit_Memo_Line__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the Credit Memo record, when an overpayment is made.</description>
        <inlineHelpText>**System Calculated/Override** Link to the Credit Memo record, when an overpayment is made.</inlineHelpText>
        <label>Credit Memo</label>
        <referenceTo>OrderApi__Credit_Memo__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_Link__c</fullName>
        <description>**System Calculated** Hyperlink to the customer detail record, either the Account or Contact as determined by the entity field.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Contact&quot;),
HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id,  OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName, &quot;&quot;),
HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id,  OrderApi__Account__r.Name, &quot;&quot;))</formula>
        <inlineHelpText>**System Calculated** Hyperlink to the customer detail record, either the Account or Contact as determined by the entity field.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <description>The date the Transaction was posted.</description>
        <inlineHelpText>The date the Transaction was posted.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>**Required/Do not modify picklist values** Select either &quot;Account&quot; or &quot;Contact&quot; as the appropriate entity related to the Transaction.</description>
        <inlineHelpText>**Required/Do not modify picklist values** Select either &quot;Account&quot; or &quot;Contact&quot; as the appropriate entity related to the Transaction.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the source Invoice for the Transaction.</description>
        <inlineHelpText>**System Calculated/Override** Link to the source Invoice for the Transaction.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Valid__c</fullName>
        <description>**System Calculated** Validates that Total Debits = Total Credits for all Transaction Lines.</description>
        <formula>((OrderApi__Total_Credits__c &gt; 0) &amp;&amp; (OrderApi__Total_Credits__c ==  OrderApi__Total_Debits__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Validates that Total Debits = Total Credits for all Transaction Lines.</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Memo__c</fullName>
        <description>Transaction description or memo.</description>
        <inlineHelpText>Transaction description or memo.</inlineHelpText>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Num_Lines__c</fullName>
        <description>**System Calculated** COUNT of related Transaction Lines.</description>
        <inlineHelpText>**System Calculated** COUNT of related Transaction Lines.</inlineHelpText>
        <label>Num Lines</label>
        <summaryForeignKey>OrderApi__Transaction_Line__c.OrderApi__Transaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Type__c</fullName>
        <description>**System Calculated** The value of the &quot;Type&quot; field for the linked receipt (where applicable).</description>
        <inlineHelpText>**System Calculated** The value of the &quot;Type&quot; field for the linked receipt (where applicable).</inlineHelpText>
        <label>Receipt Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the source Receipt for the Transaction.</description>
        <inlineHelpText>**System Calculated/Override** Link to the source Receipt for the Transaction.</inlineHelpText>
        <label>Receipt</label>
        <referenceTo>OrderApi__Receipt__c</referenceTo>
        <relationshipLabel>Transaction (Summary)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Sales Order.</description>
        <inlineHelpText>Link to related Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Transactions (Summary)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Source_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Source Code.</description>
        <inlineHelpText>Link to related Source Code.</inlineHelpText>
        <label>Source Code</label>
        <referenceTo>OrderApi__Source_Code__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Subscription.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Subscription.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total_Credits__c</fullName>
        <description>**System Calculated** SUM of related &quot;Credit&quot; Transaction Lines.</description>
        <inlineHelpText>**System Calculated** SUM of related &quot;Credit&quot; Transaction Lines.</inlineHelpText>
        <label>Total Credits</label>
        <summarizedField>OrderApi__Transaction_Line__c.OrderApi__Credit__c</summarizedField>
        <summaryForeignKey>OrderApi__Transaction_Line__c.OrderApi__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total_Debits__c</fullName>
        <description>**System Calculated** SUM of related &quot;Debit&quot; Transaction Lines.</description>
        <inlineHelpText>**System Calculated** SUM of related &quot;Debit&quot; Transaction Lines.</inlineHelpText>
        <label>Total Debits</label>
        <summarizedField>OrderApi__Transaction_Line__c.OrderApi__Debit__c</summarizedField>
        <summaryForeignKey>OrderApi__Transaction_Line__c.OrderApi__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>**System Calculated/Override** A &quot;Receivable&quot; Transaction occurs when an Invoice is posted, a &quot;Cash&quot; Transaction occurs when payment is received for an Invoice or Sales Order. Paid Invoices will have at least one &quot;Receivable&quot; and one &quot;Cash&quot; Transaction.</description>
        <inlineHelpText>**System Calculated/Override** A &quot;Receivable&quot; Transaction occurs when an Invoice is posted, a &quot;Cash&quot; Transaction occurs when payment is received for an Invoice or Sales Order. Paid Invoices will have at least one &quot;Receivable&quot; and one &quot;Cash&quot; Transaction.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receivable</fullName>
                    <color>#0B6FCE</color>
                    <label>Receivable</label>
                </value>
                <value>
                    <fullName>Cash</fullName>
                    <color>#78C953</color>
                    <label>Cash</label>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                    <color>#641CCF</color>
                    <label>Adjustment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Type__c</columns>
        <columns>OrderApi__Date__c</columns>
        <columns>OrderApi__Customer_Link__c</columns>
        <columns>OrderApi__Batch__c</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Memo__c</columns>
        <columns>OrderApi__Total_Debits__c</columns>
        <columns>OrderApi__Total_Credits__c</columns>
        <columns>OrderApi__Is_Valid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>